skin-afterlife/style.css
/* ... */
.navstrip-separator {
    color: hsl(var(--bodytext-2) / 0.5);
    margin: 0 1ch;
}

#navpanel {
    position: fixed;
    top: 0;
    background: hsl(var(--backgroundBlack));
    border-right: 0.5px solid var(--border-3);
    width: min(100%, 390px);
    height: 100vh;
    overflow-x: hidden;
    overflow-y: auto;
    z-index: 150;
    filter: blur(5px);
    transform: translateX(-100%);
    opacity: 0;
    display: none;
    transition: 0.3s ease, display 0.3s ease allow-discrete;
}

#navpanel.openmenu {
    opacity: 1;
    visibility: unset;
    filter: blur(0);
    transform: translateX(0);
    box-shadow: 10px 0 10px #00000025;
    display: block;
}

@starting-style {
    #navpanel.openmenu {
        opacity: 0;
        transform: translateX(-100%);
    }
}

.navpanel-section {
    padding: 20px;
}

.navpanel-section:not(:last-child) {
    border-bottom: 0.5px solid var(--border-3)
}

.navpanel-user {
    display: grid;
    grid-template:
        'userinfo avi' / 1fr auto;
    gap: 20px 16px;
    width: 100%;
    align-items: flex-start;
}

body:not(.gperms-2) .navpanel-user-controls {
    display: flex;
    justify-content: flex-end;
    border-bottom: 0.5px solid var(--border-3);
}

.navpanel-user-controls .ph {
    display: block;
    font-size: 20px;
    cursor: pointer;
    padding: 16px;
    color: hsl(var(--accentBase-2));
    border-left: 0.5px solid var(--border-3);
}

.navpanel-user-info {
    grid-area: userinfo;
    flex: 1;
    transition: .3s ease;
}

.navpanel--username {
    font: 500 var(--font-mixta-32);
    color: hsl(var(--accentBase-2));
    margin-bottom: 4px;
}

.navpanel--username .ph {
    font-size: 20px;
}

.navpanel--userlinks {
    display: flex;
    gap: 8px;
}

.navpanel--userlinks a {
    font: 600 var(--font-mono-13);
    color: hsl(var(--bodytext-2));
    display: flex;
    align-items: center;
    width: fit-content;
    padding: 4px 4px;
    gap: 4px;
}

.navpanel--userdesc {
    font: 500 italic var(--font-serif-15);
    margin: 0.5em 0;
    color: hsl(var(--bodytext-2));
}

body:not(.gperms-2) .navpanel--userlinks-big {
    grid-area: userbuttons;
    display: flex;
    justify-content: space-between;
    gap: 8px;
}

.navpanel--userlinks-big a {
    display: none;
    border: 1px solid var(--border-3);
    flex: 1;
    font: 600 var(--font-mono-14);
    color: hsl(var(--accentBase-2));
    text-transform: uppercase;
    letter-spacing: 10%;
    text-align: center;
    padding: 8px 16px;
}

.gperms-2 .navpanel--userlinks.perms-loggedin,
body:not(.gperms-2) .navpanel--userlinks.perms-loggedout {
    display: none;
}

.gperms-2 .navpanel--userlinks.perms-loggedout,
body:not(.gperms-2) .navpanel--userlinks.perms-loggedin {
    display: flex;
}

.navpanel--userlinks .ph {
    font-size: 20px;
    color: hsl(var(--accentBase-2));
}

.navpanel--avi {
    grid-area: avi;
    width: 80px;
    aspect-ratio: 1;
    margin-top: 8px;
}

#navpanel .siteheader-linksbox--quicklinks {
    border-top: 0;
    margin-top: 0;
}

.accswitch-toggle {
    cursor: pointer;
}

#navpanel .accswitch-toggle {
    margin-left: 0.5ch;
}

.accswitch-swap-area:not(.acc-switch-open) .accswitch-close,
.accswitch-swap-area.acc-switch-open .accswitch-toggle {
    display: none;
}

#navpanel .accswitch-close {
    cursor: pointer;
    font: 500 var(--font-mixta-24);
    color: hsl(var(--accentBase-2));
}

.accswitch-close .ph {
    font-size: 20px;
    color: hsl(var(--accentBase-2));
}

.accswitch-swap-area:not(.acc-switch-open) .navpanel-user-info {
    opacity: 1;
    transform: translateX(0%);
    transition: .3s ease allow-discrete;
}

#navpanel .accswitch-panel {
    grid-area: userinfo;
    display: none;
    flex: 1;
    margin-top: 10px;
    opacity: 0;
    transform: translateX(-50%);
    transition: .3s ease allow-discrete;
}

#navpanel.acc-switch-open .accswitch-panel {
    display: block;
    opacity: 1;
    transform: translateX(0);
}

.acc-switch-open .navpanel-user-info {
    display: none;
    opacity: 0;
    pointer-events: none;
    transition: .3s ease allow-discrete;
}


@starting-style {
    #navpanel.acc-switch-open .accswitch-panel {
        opacity: 0;
        transform: translateX(-50%);
    }

    .accswitch-swap-area:not(.acc-switch-open) .navpanel-user-info {
        opacity: 0;
        transform: translateX(-50%);
    }
}


.forum-guidebook-userbox .accswitch-toggle,
.forum-guidebook-userbox .accswitch-close {
    cursor: pointer;
    position: absolute;
    top: 0;
    right: 0;
    border: 0.5px solid var(--border-3);
    width: 40px;
    height: 40px;
    text-align: center;
    padding-top: 8px;
    font-size: 20px;
    color: hsl(var(--accentBase-2));
}
/* ... */

